--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.game.MainActivity">
         </activity>
-        <activity android:name=".SGActivity" />
-        <activity android:name=".GameActivity" android:screenOrientation="landscape">
+        <activity android:name=".activity.sg.SGActivity" />
+        <activity android:name=".activity.game.GameActivity" android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
